Possibly fix ODR violation in the transform tool strategies

BUG:480520